# edu-backend

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  webpack.mix.js
application_mask/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
application_mask/migrations/: 0001_initial.py  0002_applicant_email.py  0003_applicant_inspector_appl.py
application_mask/resources/js/: application_mask.js
application_mask/resources/js/components/: ApplicationCard.vue  RegistrationDisabledDialog.vue
application_mask/resources/sass/: application_mask.scss
application_mask/static/: mix-manifest.json
application_mask/templates/application_mask/: MainPage.html  base_layout.html  index.html
config/: urls.py
config/settings/: common.py  production.py
docker/dokku/: Dockerfile
docker/local/: Dockerfile.web
